--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: VoteReward
 main: LDX\VoteReward\Main
 version: 3.0.2-5
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
 author: LDX
 website: "https://github.com/LDX-MCPE/VoteReward"
 load: POSTWORLD
